Update references, age API, warnings, and SDK targets